<resources>
    <string name="app_name">Poids Plume</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="line_chart_rate_label">Taux (en %)</string>
    <string name="line_chart_weight_label">Poids (en kg)</string>
    <string name="pie_chart_rate_label">Taux</string>
    <string name="weight_label">Poids</string>

    <string name="nav_title_home">Accueil</string>
    <string name="nav_title_history">Historique</string>
    <string name="nav_history_weight">Poids</string>
    <string name="nav_history_muscle">Masse musculaire</string>
    <string name="nav_history_bones">Masse osseuse</string>
    <string name="nav_history_water">Masse hydrique</string>
    <string name="nav_history_fat">Graisse corporelle</string>
    <string name="nav_title_settings">Paramètres</string>

    <string name="add_data_title">Nouvelle donnée</string>
    <string name="add_data_weight">Poids</string>
    <string name="add_data_muscular_mass">Masse musculaire</string>
    <string name="add_data_bones">Masse osseuse</string>
    <string name="add_data_fat_mass">Graisse corporelle</string>
    <string name="add_data_water">Masse hydrique</string>
    <string name="add_data_ok">OK</string>
    <string name="add_data_cancel">Annuler</string>
    <string name="add_data_error_empty_field">Veuillez entrer une valeur</string>
    <string name="add_data_error_invalid_weight">Veuillez entrer une valeur comprise entre 0 et 180</string>
    <string name="add_data_error_percent_value">Veuillez entrer un pourcentage</string>
    <string name="add_data_unit_weight">kg</string>
    <string name="add_data_unit_percentage">%</string>

    <string name="history_title_bones">Historique de masse osseuse</string>
    <string name="history_title_fat">Historique de graisse corporelle</string>
    <string name="history_title_muscle">Historique de masse musculaire</string>
    <string name="history_title_water">Historique de masse hydrique</string>
    <string name="history_title_weight">Historique du poids</string>

    <string name="history_date">Date</string>
    <string name="history_weight_table">Poids</string>
    <string name="history_value_type_rate">Taux</string>
    <string name="history_result">Résultat</string>
    <string name="history_value_unit_kg">%s kg</string>
    <string name="history_value_unit_percentage">%s %%</string>

    <string name="history_remove_data_title">Supprimer une donnée</string>
    <string name="history_remove_data_information">Êtes-vous sûr de vouloir supprimer les données suivantes ?\n\n%s</string>
    <string name="history_remove_data_cancel">Annuler</string>
    <string name="history_remove_data_validate">Supprimer</string>

    <string name="data_date">"Date : "</string>
    <string name="data_weight">"Poids : "</string>
    <string name="data_body_fat">"Graisse corporelle : "</string>
    <string name="data_muscular_mass">"Masse musculaire : "</string>
    <string name="data_water_mass">"Masse hydrique : "</string>
    <string name="data_bone_mass">"Masse osseuse : "</string>

    <string name="settings_title">Paramètres</string>
    <string name="settings_activation_label">Évaluation des taux</string>
    <string name="settings_activation_warning">Les paramètres utilisés pour évaluer les taux que vous allez saisir sont spécifiques à certaines balances. Si ceux-ci ne semblent pas correspondre à votre balance ou que vous ne souhaitez pas avoir d\'évaluation de vos taux (symbolisés par des muscles de taille et couleurs différentes dans votre historique), vous pouvez désactiver cette fonctionnalité.</string>
    <string name="settings_date_of_birth">Date de naissance</string>
    <string name="settings_gender">Sexe</string>
    <string name="settings_default_date_of_birth">--/--/----</string>
    <string name="settings_warning_fill_all_parameters">Vous devez renseigner votre sexe et votre date de naissance pour que l\'évaluation de vos taux fonctionne.</string>

</resources>
