<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:id="@+id/settings_activation_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:text="@string/settings_activation_label"/>

            <TextView
                android:id="@+id/settings_activation_warning_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/warning_text_size"
                android:text="@string/settings_activation_warning"/>

        </LinearLayout>

        <Switch
            android:id="@+id/settings_activation_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/settings_gender_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements">

        <TextView
            android:id="@+id/settings_gender_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/default_text_size"
            android:text="@string/settings_gender"/>

        <ImageView
            android:id="@+id/settings_gender_female_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_gender_label_text_view"
            android:layout_toLeftOf="@+id/settings_gender_male_image_view"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_female"/>

        <ImageView
            android:id="@+id/settings_gender_male_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_gender_label_text_view"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_male"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_date_of_birth_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements">

        <TextView
            android:id="@+id/settings_date_of_birth_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/default_text_size"
            android:text="@string/settings_date_of_birth"/>

        <Button
            android:id="@+id/settings_date_of_birth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/settings_default_date_of_birth"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/settings_warning_all_parameters_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:textSize="@dimen/warning_text_size"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/settings_warning_fill_all_parameters"/>

</LinearLayout>